--- a/Landing Page/style/style.css
+++ b/Landing Page/style/style.css
@@ -1,3 +1,46 @@
+*, *::before, *::after{
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Tinos', serif;
+    font-size: 1.05rem;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+header.navbar-container{
+    width: 100%;
+    background-color: #393E46;
+    margin-inline: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header.navbar-container .logo img{
+    width: 50px;
+}
+
+header.navbar-container .nav-list ul {
+    display: flex;
+    justify-content: center;
+    gap: 3rem 2rem;
+}
+
+header.navbar-container .nav-list li {
+    list-style-type: none;
+}
+
+header.navbar-container .nav-list li a{
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #EEEEEE;
+    transition: all 0.3s ease-in-out;
+}
+
+header.navbar-container .nav-list li:hover a{
+    background-color: #222831;
 }
